# qrdrop

./: .dockerignore  .gitattributes  .gitignore  DOCKERHUB.md  Dockerfile  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: release.yml
scripts/: audit.py  audit_fix.py  docker_build.py  lock.py  release.py
src/qrdrop/: __init__.py  __main__.py  cli.py
src/qrdrop/core/: filesystem.py  filetypes.py  log_redaction.py  network.py  password.py  qr.py  session.py  terminal.py  wordlist.py
src/qrdrop/static/: app.js  style.css
src/qrdrop/templates/: base.html  browse.html  login.html  view_image.html  view_text.html
src/qrdrop/web/: __init__.py  app.py  middleware.py  routes.py
src/qrdrop/web/handlers/: _common.py  archive.py  auth.py  browse.py  files.py  health.py  mutate.py  upload.py
tests/: __init__.py  conftest.py  test_archive.py  test_auth_middleware.py  test_browse.py  test_cli.py  test_cli_main.py  test_delete.py  test_files.py  test_filesystem.py  test_filetypes.py  test_health.py  test_log_redaction.py  test_mutate.py  test_network.py  test_password.py  test_qr.py  test_security.py  test_session.py  test_terminal.py  test_upload.py  test_upload_edge.py  test_view.py  test_wordlist.py
tests/e2e/: __init__.py  conftest.py  test_smoke.py
