[project]
name = "qrdrop"
version = "1.0.0"
description = "Instant file sharing from your terminal - share files over LAN with a simple command"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "itsloopyo" }
]
keywords = ["file-sharing", "lan", "http", "server", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
# The FULL transitive closure is pinned ==, deliberately: qrdrop is an
# application installed via `uvx qrdrop`/`pip install qrdrop`, so end users
# resolve from this metadata at install time. Exact pins mean they get the
# versions we tested, not whatever was published this morning - a hijacked
# dependency release cannot reach users without a new qrdrop release.
# Bump via `pixi run lock` (enforces the two-week release cooldown), retest,
# release.
dependencies = [
    "starlette==1.1.0",
    "uvicorn==0.46.0",
    "jinja2==3.1.6",
    "qrcode==8.2",
    "python-multipart==0.0.30",
    "aiofiles==25.1.0",
    # Transitive
    "anyio==4.13.0",
    "click==8.3.3",
    "colorama==0.4.6; sys_platform == 'win32' or platform_system == 'Windows'",
    "h11==0.16.0",
    "idna==3.15",
    "markupsafe==3.0.3",
    "typing-extensions==4.15.0; python_version < '3.13'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "httpx>=0.27.0",
    "pytest-playwright>=0.5.0",
    "build>=1.0.0",
    "twine>=5.0.0",
    "hatchling>=1.25.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
qrdrop = "qrdrop.__main__:main"

[project.urls]
Homepage = "https://github.com/itsloopyo/qrdrop"
Documentation = "https://github.com/itsloopyo/qrdrop#readme"
Repository = "https://github.com/itsloopyo/qrdrop"
Issues = "https://github.com/itsloopyo/qrdrop/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qrdrop"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src/qrdrop"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["qrdrop"]
